Fix: low contrast nav li a

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ nav ul li a {
     text-transform: uppercase;
     text-decoration: none;
     font-size: 18px;
-    color: #828282;
+    color: #1d3557;
     padding-left: 80px;
 }
 
